--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_boilerplate",
-    "short_name": "flutter_boilerplate",
+    "name": "lumberjack",
+    "short_name": "lumberjack",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
