--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   shared_preferences: ^2.2.2
   collection: ^1.17.2
   get_it: ^7.6.4
+  flutter_svg: ^2.0.9
+  provider: ^6.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -22,5 +24,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/images/
 flutter_intl:
   enabled: true
