--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get_it: ^7.6.4
   flutter_svg: ^2.0.9
   provider: ^6.0.5
+  mocktail: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
